--- a/taskbar/base.html
+++ b/taskbar/base.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<!--https://coolors.co/palette/151633-2a2c66-3f4299-696eff-f8acff-f0f1ff-->
-
 <html>
 <head>
     <meta charset='utf-8'>
@@ -10,11 +8,11 @@
     <link rel='stylesheet' href='base.css'>
 </head>
 <body>
-    <nav>
+    <nav>  
         <ul class = "links">
             <li><a href = "asdf">About</li>
-            <li><a href = "asdf">Portfolio</li>
-            <li><a href = "asdf">Contact</li>
+            <li><b href = "asdf">Portfolio</li>
+            <li><c href = "asdf">Contact</li>
         </ul>
     </nav>  
 </body>
