navbar is presentable

--- a/taskbar/base.html
+++ b/taskbar/base.html
@@ -8,11 +8,11 @@
     <link rel='stylesheet' href='base.css'>
 </head>
 <body>
-    <nav>  
+    <div class = "navbar">  
         <ul class = "links">
-            <li><a href = "asdf">About</li>
-            <li><b href = "asdf">Portfolio</li>
-            <li><c href = "asdf">Contact</li>
+            <a href = "asdf">About</a>
+            <a href = "asdf">Portfolio</a>
+            <a href = "asdf">Contact</a>
         </ul>
     </nav>  
 </body>
