--- a/src/taskbar.html
+++ b/src/taskbar.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Davis Street</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' href='app.css'>
+    <link rel='stylesheet' href='taskbar.css'>
 </head>
 <body>
     <div class = "navbar">  
